--- a/assets/style.css
+++ b/assets/style.css
@@ -5,24 +5,20 @@ body {
 }
 
 .header {
-    background-color: #222222;
-    height: 256px;
+    background-color: #333333;
+    height: 180px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.header-emoji {
-    font-size: 48px;
-    margin: 0 auto;
     text-align: center;
+    flex-direction: column;
+    justify-content: right;
 }
 
 .header-title {
     color: #FFFFFF;
-    font-size: 48px;
+    font-size: 32px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
+    padding-top: 12px;
     margin: 0 auto;
 }
 
@@ -36,23 +32,25 @@ body {
 .wrapper {
     margin-right: auto;
     margin-left: auto;
-    max-width: 1024px;
-    padding-right: 10px;
-    padding-left: 10px;
-    margin-top: 32px;
+    max-width: 1200px;
+    padding-top: 0px;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-top: 5px;
 }
 
 .card {
-    margin-bottom: 24px;
+    margin-bottom: 6px;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
 }
 
 .menu {
-    height: 112px;
-    width: 912px;
+    height: 100px;
+    width: 1200px;
     display: flex;
+    font-size: 12px;
     justify-content: space-evenly;
-    padding-top: 24px;
+    padding-top: 16px;
     margin: -80px auto 0 auto;
     background-color: #FFFFFF;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
